@@ -1,6 +1,6 @@
 {
   "name": "simp-selinux",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "author": "SIMP Team",
   "summary": "manages the SELinux system state",
   "license": "Apache-2.0",
@@ -43,5 +43,6 @@
       "name": "puppet",
       "version_requirement": ">= 4.6.0 < 5.0.0"
     }
-  ]
+  ],
+  "data_provider": "hiera"
 }
