@@ -1,3 +1,7 @@
+* Wed Apr 26 2017 Nick Miller <nick.miller@onyxpoint.com> - 2.1.0-0
+- Moved management of mcstrans and restorecond to the selinux module
+- Change default packages ensure to use the catalyst
+
 * Mon Apr 17 2017 Nick Markowski <nmarkowski@keywcorp.com> - 2.0.3-0
 - Fixed a bug wherein setenforce would run if selinux was disabled
 - Changes in selinux state incur a reboot notification
